--- a/pages/news-detail/news-detail.wxss
+++ b/pages/news-detail/news-detail.wxss
@@ -3,10 +3,11 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 48rpx;
   line-height: 68rpx;
-  padding-left: 40rpx;
-  padding-right: 40rpx;
+  padding-left: 55rpx;
+  padding-right: 55rpx;
   padding-top: 15rpx;
   padding-bottom: 20rpx;
+  text-align: justify;
 }
 
 .news-specs-wrapper {
@@ -15,33 +16,38 @@
   justify-content: space-between;
   font-size: 30rpx;
   color: grey;
-  padding-left: 40rpx;
-  padding-right: 40rpx;
-  padding-bottom: 60rpx;
+  margin-top: 25rpx;
+  margin-left: 55rpx;
+  margin-right: 55rpx;
+  margin-bottom: 60rpx;
 }
 
 .news-content {
   display: flex;
   flex-direction: column;
-  padding-left: 40rpx;
-  padding-right: 40rpx;
-  padding-top: 20rpx;
+  margin-left: 55rpx;
+  margin-right: 55rpx;
+  margin-top: 20rpx;
   align-items: center;
 }
 
 .news-head-image {
   margin-bottom: 40rpx;
-  width: 670rpx;
-  height: 670rpx;
+  width: 650rpx;
+  height: 650rpx;
 }
 
 .news-text {
-  font-size: 30rpx;
-  line-height: 50rpx;
+  font-size: 32rpx;
+  line-height: 64rpx;
   text-align: justify;
+  
 }
 
 .news-tail {
   font-size: 40rpx;
   line-height: 56rpx;
+  margin-top: 100rpx;
+  margin-bottom: 50rpx;
+  text-align: center;
 }
