--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,35 +1,77 @@
 <!-- 顶部导航栏 -->
-<scroll-view scroll-x>
   <view class='news-type-list'>
-    <view class='news-type-item' id='first'>国内1</view>
-    <view class='news-type-item'>国内2</view>
-    <view class='news-type-item'>国内3</view>
-    <view class='news-type-item'>国内4</view>
-    <view class='news-type-item'>国内5</view>
-    <view class='news-type-item'>国内6</view>
-    <view class='news-type-item'>国内7</view>
-    <view class='news-type-item'>国内8</view>
-    <view class='news-type-item'>国内9</view>
+    <view class='news-type-item' id='current'>国内</view>
+    <view class='news-type-item' id=''>国际</view>
+    <view class='news-type-item' id=''>财经</view>
+    <view class='news-type-item' id=''>娱乐</view>
+    <view class='news-type-item' id=''>军事</view>
+    <view class='news-type-item' id=''>体育</view>
+    <view class='news-type-item' id=''>其它</view>
   </view>
-</scroll-view>
+
 <!-- 头条 -->
 <view class='headline-wrapper'>
-  <view class='headline-text'>Headline Text</view>
   <view class='image-wrapper'>
-    <image class='test-image' src='../../images/logo.png'></image>
+    <image class='test-image' src='../../images/owl.png'></image>
   </view>
   <view class='headline-specifics'>
-    <view class='headline-source'>头条来源</view>
-    <view class='headline-time'>3分钟前</view>
+    <view class='headline-text'>Headline Text</view>
+    <view class='headline-info'>
+      <view class='headline-source'>头条来源</view>
+      <view class='headline-time'>3分钟前</view>
+    </view>
   </view>
 </view>
 <!-- 其它新闻 -->
-<view class='news-wrapper'>
-  <view class='news-content'>
-    <view>新闻标题</view>
-    <view class='news-specifics'>
-      <view class='news-source'>新闻来源</view>
-      <view class='news-time'>5分钟前</view>
+<view class='list-news-wrapper'>
+  <view class='list-news-block'>
+    <view class='list-news-content'>
+      <view class='list-news-title'>新闻标题</view>
+      <view class='list-news-specifics-wrapper'>
+        <view class='list-news-source'>新华社</view>
+        <view class='list-news-time'>5分钟前</view>
+      </view>
     </view>
+    <image class='list-news-image' src='../../images/logo.png'></image>
+  </view>
+  <view class='list-news-block'>
+    <view class='list-news-content'>
+      <view class='list-news-title'>新闻标题</view>
+      <view class='list-news-specifics-wrapper'>
+        <view class='list-news-source'>新华社</view>
+        <view class='list-news-time'>5分钟前</view>
+      </view>
+    </view>
+    <image class='list-news-image' src='../../images/snapshot.png'></image>
+  </view>
+  <view class='list-news-block'>
+    <view class='list-news-content'>
+      <view class='list-news-title'>新闻标题</view>
+      <view class='list-news-specifics-wrapper'>
+        <view class='list-news-source'>新华社</view>
+        <view class='list-news-time'>5分钟前</view>
+      </view>
+    </view>
+    <image class='list-news-image' src='../../images/logo.png'></image>
+  </view>
+  <view class='list-news-block'>
+    <view class='list-news-content'>
+      <view class='list-news-title'>新闻标题</view>
+      <view class='list-news-specifics-wrapper'>
+        <view class='list-news-source'>新华社</view>
+        <view class='list-news-time'>5分钟前</view>
+      </view>
+    </view>
+    <image class='list-news-image' src='../../images/logo.png'></image>
+  </view>
+  <view class='list-news-block'>
+    <view class='list-news-content'>
+      <view class='list-news-title'>新闻标题</view>
+      <view class='list-news-specifics-wrapper'>
+        <view class='list-news-source'>新华社</view>
+        <view class='list-news-time'>5分钟前</view>
+      </view>
+    </view>
+    <image class='list-news-image' src='../../images/logo.png'></image>
   </view>
 </view>
